--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,18 +14,25 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "zod": "^3.25.16",
-    "hono": "^4.7.6",
+    "@upstash/redis": "^1.35.0",
+    "bcrypt": "^6.0.0",
+    "better-auth": "^1.2.8",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.38.4",
+    "hono": "^4.7.6",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
-    "better-auth": "^1.2.7"
+    "postgres": "^3.4.7",
+    "zod": "^3.25.16"
   },
   "devDependencies": {
-    "tsc-alias": "^1.8.11",
-    "typescript": "^5.8.2",
     "@types/bun": "^1.2.6",
-    "drizzle-kit": "^0.30.5",
-    "@types/pg": "^8.11.11"
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/pg": "^8.11.11",
+    "drizzle-kit": "^0.30.6",
+    "tsc-alias": "^1.8.11",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.2"
   }
 }
